--- a/po/uk.po
+++ b/po/uk.po
@@ -93,7 +93,7 @@ msgstr ""
 
 #: bs_disp_as_mime_type.php:35
 msgid "Failed to fetch headers"
-msgstr ""
+msgstr "Отримання заголовків невдале"
 
 #: bs_disp_as_mime_type.php:41
 msgid "Failed to open remote URL"
