--- a/po/uk.po
+++ b/po/uk.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-27 23:19+0200\n"
+"PO-Revision-Date: 2010-07-27 23:20+0200\n"
 "Last-Translator:  <zalex_ua@i.ua>\n"
 "Language-Team: ukrainian <uk@li.org>\n"
 "Language: uk\n"
@@ -88,7 +88,7 @@ msgstr "Опис"
 #: browse_foreigners.php:245 browse_foreigners.php:254
 #: browse_foreigners.php:266 browse_foreigners.php:274
 msgid "Use this value"
-msgstr ""
+msgstr "Використовувати це значення"
 
 #: bs_disp_as_mime_type.php:29 bs_play_media.php:35
 msgid "No blob streaming server configured!"
