--- a/po/uk.po
+++ b/po/uk.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-27 23:32+0200\n"
+"PO-Revision-Date: 2010-07-27 23:33+0200\n"
 "Last-Translator:  <zalex_ua@i.ua>\n"
 "Language-Team: ukrainian <uk@li.org>\n"
 "Language: uk\n"
@@ -450,10 +450,9 @@ msgid "Add/Delete criteria rows"
 msgstr "Додати/Прибрати рядки критеріїв"
 
 #: db_qbe.php:592
-#, fuzzy
 #| msgid "Add/Delete Field Columns"
 msgid "Add/Delete columns"
-msgstr "Додати/забрати колонку критерію"
+msgstr "Додати/Прибрати колонки"
 
 #: db_qbe.php:605 db_qbe.php:630
 msgid "Update Query"
