--- a/po/ug.po
+++ b/po/ug.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-27 12:45+0200\n"
-"Last-Translator:  <gheni@yahoo.cn>\n"
+"PO-Revision-Date: 2010-07-28 04:09+0200\n"
+"Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
 "MIME-Version: 1.0\n"
@@ -1705,7 +1705,7 @@ msgstr " ئىچكى بىرلىشىش"
 
 #: libraries/common.lib.php:1343 libraries/common.lib.php:1358
 msgid "Profiling"
-msgstr ""
+msgstr "ئاساسىي مەزمۇن"
 
 #: libraries/common.lib.php:1362 libraries/tbl_triggers.lib.php:27
 #: server_processlist.php:57
