--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-28 04:09+0200\n"
+"PO-Revision-Date: 2010-07-28 04:10+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1727,7 +1727,7 @@ msgstr "MB"
 
 #: libraries/common.lib.php:1390
 msgid "GiB"
-msgstr ""
+msgstr "GB"
 
 #: libraries/common.lib.php:1390
 msgid "TiB"
