Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -1731,7 +1731,7 @@ msgstr "GB"
 
 #: libraries/common.lib.php:1390
 msgid "TiB"
-msgstr ""
+msgstr "TB"
 
 #: libraries/common.lib.php:1390
 msgid "PiB"
