Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -1744,7 +1744,7 @@ msgstr "EB"
 #. l10n: Thousands separator
 #: libraries/common.lib.php:1428
 msgid ","
-msgstr ""
+msgstr ","
 
 #. l10n: Decimal separator
 #: libraries/common.lib.php:1430
