--- a/po/ug.po
+++ b/po/ug.po
@@ -1749,7 +1749,7 @@ msgstr ","
 #. l10n: Decimal separator
 #: libraries/common.lib.php:1430
 msgid "."
-msgstr ""
+msgstr "."
 
 #. l10n: See http://www.php.net/manual/en/function.strftime.php to define the format string
 #: libraries/common.lib.php:1607
