--- a/po/ug.po
+++ b/po/ug.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-28 04:16+0200\n"
-"Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
+"PO-Revision-Date: 2010-07-28 04:17+0200\n"
+"Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
 "MIME-Version: 1.0\n"
@@ -1755,7 +1755,7 @@ msgstr "."
 #: libraries/common.lib.php:1607
 #: libraries/transformations/text_plain__dateformat.inc.php:33
 msgid "%B %d, %Y at %I:%M %p"
-msgstr ""
+msgstr "%d %B %Y, %H:%M:%S"
 
 #: libraries/common.lib.php:1913
 #, php-format
