--- a/po/ug.po
+++ b/po/ug.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-28 04:20+0200\n"
-"Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
+"PO-Revision-Date: 2010-07-28 04:21+0200\n"
+"Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
 "MIME-Version: 1.0\n"
@@ -1781,7 +1781,7 @@ msgstr "ئاخىرقىسى"
 #: libraries/common.lib.php:2434
 #, php-format
 msgid "Jump to database &quot;%s&quot;."
-msgstr ""
+msgstr "ساندان &quot;%s&quot; .غا ئۆتۈش"
 
 #: libraries/common.lib.php:2453
 #, php-format
