--- a/po/ug.po
+++ b/po/ug.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-28 04:21+0200\n"
-"Last-Translator:  <gheni@yahoo.cn>\n"
+"PO-Revision-Date: 2010-07-28 04:22+0200\n"
+"Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
 "MIME-Version: 1.0\n"
@@ -1815,7 +1815,7 @@ msgstr ""
 #: libraries/display_create_table.lib.php:52 libraries/tbl_triggers.lib.php:26
 #: setup/frames/index.inc.php:112
 msgid "Name"
-msgstr ""
+msgstr "ئىسمى"
 
 #: libraries/db_links.inc.php:42 libraries/db_links.inc.php:43
 #: libraries/db_links.inc.php:44
