Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -1825,7 +1825,7 @@ msgstr "سانلىق مەلۇمات ئامبىرى قۇرۇق"
 #: libraries/db_links.inc.php:66 libraries/relation.lib.php:137
 #: libraries/tbl_links.inc.php:67
 msgid "Tracking"
-msgstr ""
+msgstr "ئىز قۇغلاش"
 
 #: libraries/db_links.inc.php:71
 msgid "Query"
