--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-28 04:28+0200\n"
+"PO-Revision-Date: 2010-07-28 04:31+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1866,7 +1866,7 @@ msgstr ""
 #: libraries/db_structure.lib.php:60 server_databases.php:139
 #: tbl_printview.php:333 tbl_structure.php:679
 msgid "Overhead"
-msgstr ""
+msgstr "ئېغىر يۈك"
 
 #: libraries/dbi/mysql.dbi.lib.php:111 libraries/dbi/mysqli.dbi.lib.php:123
 msgid "Connection for controluser as defined in your configuration failed."
