--- a/po/ug.po
+++ b/po/ug.po
@@ -1883,7 +1883,7 @@ msgstr "(يەرلىك MySQL مۇلازىمىتېرى توغرا تەڭشەلمى
 
 #: libraries/dbi/mysql.dbi.lib.php:358 tbl_structure.php:605
 msgid "Details..."
-msgstr ""
+msgstr "تەپسىلاتلار..."
 
 #: libraries/display_change_password.lib.php:29 main.php:90
 #: user_password.php:106 user_password.php:124
