--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-28 04:40+0200\n"
+"PO-Revision-Date: 2010-07-28 04:42+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1908,7 +1908,7 @@ msgstr "پارول"
 #: libraries/replication_gui.lib.php:355 libraries/replication_gui.lib.php:358
 #: server_privileges.php:814 server_privileges.php:817
 msgid "Re-type"
-msgstr ""
+msgstr "قايتا كىرگۈزىش"
 
 #: libraries/display_change_password.lib.php:51
 msgid "Password Hashing"
