--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-28 04:47+0200\n"
+"PO-Revision-Date: 2010-07-28 04:48+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1921,7 +1921,7 @@ msgstr "MySQL 4.0 بىلەن سەپلەش"
 #: libraries/display_create_database.lib.php:21
 #: libraries/display_create_database.lib.php:35
 msgid "Create new database"
-msgstr ""
+msgstr "ساندان قۇرۇش"
 
 #: libraries/display_create_database.lib.php:29
 msgid "Create"
