--- a/po/ug.po
+++ b/po/ug.po
@@ -1925,7 +1925,7 @@ msgstr "ساندان قۇرۇش"
 
 #: libraries/display_create_database.lib.php:29
 msgid "Create"
-msgstr ""
+msgstr "قۇرۇش"
 
 #: libraries/display_create_database.lib.php:39 server_privileges.php:112
 #: server_privileges.php:1423 server_replication.php:33
