--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-28 04:48+0200\n"
+"PO-Revision-Date: 2010-07-28 04:49+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1930,7 +1930,7 @@ msgstr "قۇرۇش"
 #: libraries/display_create_database.lib.php:39 server_privileges.php:112
 #: server_privileges.php:1423 server_replication.php:33
 msgid "No Privileges"
-msgstr ""
+msgstr "ھوقۇقسىز"
 
 #: libraries/display_create_table.lib.php:40
 msgid "Table must have at least one column."
