--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-29 07:50+0200\n"
+"PO-Revision-Date: 2010-07-29 07:51+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1979,7 +1979,7 @@ msgstr "ساندان ئىسمى"
 
 #: libraries/display_export.lib.php:151
 msgid "table name"
-msgstr ""
+msgstr "سانلىق مەلۇمات جەدىۋېلى ئىسمى"
 
 #: libraries/display_export.lib.php:155
 #, php-format
