--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-29 07:51+0200\n"
+"PO-Revision-Date: 2010-07-29 07:53+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1991,7 +1991,7 @@ msgstr ""
 
 #: libraries/display_export.lib.php:196
 msgid "remember template"
-msgstr ""
+msgstr "ئەستە ساقلاش قېلىپى"
 
 #: libraries/display_export.lib.php:204 libraries/display_import.lib.php:177
 #: libraries/display_import.lib.php:190 libraries/sql_query_form.lib.php:509
