Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -2045,7 +2045,7 @@ msgstr ""
 
 #: libraries/display_import.lib.php:125
 msgid "File to import"
-msgstr ""
+msgstr "ئەكىرىشكە تىگىشلىك ھۆججەت"
 
 #: libraries/display_import.lib.php:136 libraries/sql_query_form.lib.php:484
 msgid "Location of the text file"
