--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-29 08:01+0200\n"
+"PO-Revision-Date: 2010-07-29 08:02+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -2125,7 +2125,7 @@ msgstr "سانلىق مەلۇمات لوغەت شەكلى"
 
 #: libraries/display_pdf_schema.lib.php:50
 msgid "Landscape"
-msgstr ""
+msgstr "توغرىسىغا"
 
 #: libraries/display_pdf_schema.lib.php:51
 msgid "Portrait"
