--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-29 08:12+0200\n"
+"PO-Revision-Date: 2010-07-30 05:59+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1928,7 +1928,7 @@ msgstr "ھوقۇقسىز"
 
 #: libraries/display_create_table.lib.php:40
 msgid "Table must have at least one column."
-msgstr ""
+msgstr "سانلىق مەلۇمات جەدېۋىلىدە ئەڭ ئاز بولغاندا بىر خەت بۇلۇش كىرەك"
 
 #: libraries/display_create_table.lib.php:47
 #, php-format
