--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-30 06:18+0200\n"
+"PO-Revision-Date: 2010-07-30 06:19+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -2041,7 +2041,7 @@ msgstr "بىتەرەپ قىلىنىۋاتىدۇ، ساقلاڭ"
 msgid ""
 "Please be patient, the file is being uploaded. Details about the upload are "
 "not available."
-msgstr ""
+msgstr "يوللىنىۋاتىدۇ،تەپسىلىي ئۇچۇرى يوق،ساقلاڭ"
 
 #: libraries/display_import.lib.php:125
 msgid "File to import"
