--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-30 06:21+0200\n"
+"PO-Revision-Date: 2010-07-30 06:22+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -2264,7 +2264,7 @@ msgstr ""
 #: querywindow.php:114 querywindow.php:118 querywindow.php:121
 #: tbl_structure.php:23 tbl_structure.php:148 tbl_structure.php:467
 msgid "Change"
-msgstr ""
+msgstr "ئۆزگەرتتىش"
 
 #: libraries/display_tbl.lib.php:2117
 msgid "Query results operations"
