--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-30 06:25+0200\n"
+"PO-Revision-Date: 2010-07-30 06:26+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -2276,7 +2276,7 @@ msgstr "بېسىپ چىقىرش كۈرۈلمىسى"
 
 #: libraries/display_tbl.lib.php:2318
 msgid "Link not found"
-msgstr ""
+msgstr "ئۇلىنىشنى تاپالمىدى"
 
 #: libraries/engines/bdb.lib.php:20 main.php:227
 msgid "Version information"
