--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-30 06:33+0200\n"
+"PO-Revision-Date: 2010-07-30 06:34+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -2334,7 +2334,7 @@ msgstr "يىغىندىسى"
 
 #: libraries/engines/innodb.lib.php:171
 msgid "pages"
-msgstr ""
+msgstr "بەت سانى"
 
 #: libraries/engines/innodb.lib.php:180
 msgid "Free pages"
