--- a/po/ug.po
+++ b/po/ug.po
@@ -2378,7 +2378,7 @@ msgstr ""
 
 #: libraries/engines/innodb.lib.php:246
 msgid "Write waits"
-msgstr ""
+msgstr "يېزىشنى كۈتۈۋاتقان سانى"
 
 #: libraries/engines/innodb.lib.php:252
 msgid "Read misses in %"
