--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-30 06:45+0200\n"
+"PO-Revision-Date: 2010-07-30 06:47+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -2617,7 +2617,7 @@ msgstr ""
 
 #: libraries/engines/pbxt.lib.php:67
 msgid "Data file grow size"
-msgstr ""
+msgstr "سانلىق مەلۇمات ھۆججىتىنىڭ ئېشىش چوڭ-كىچىكلىكى"
 
 #: libraries/engines/pbxt.lib.php:68
 msgid "The grow size of the handle data (.xtd) files."
