--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-30 06:47+0200\n"
+"PO-Revision-Date: 2010-07-30 06:48+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -2633,7 +2633,7 @@ msgstr ""
 
 #: libraries/engines/pbxt.lib.php:77
 msgid "Log file count"
-msgstr ""
+msgstr "كۈندىلىك ھۆججەت ئۇمۇمىي سانى"
 
 #: libraries/engines/pbxt.lib.php:78
 msgid ""
