--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-30 06:48+0200\n"
+"PO-Revision-Date: 2010-07-30 06:49+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -2650,7 +2650,7 @@ msgstr "فورماتلاش"
 
 #: libraries/export/csv.php:16 libraries/import/csv.php:21
 msgid "CSV"
-msgstr ""
+msgstr "CSV"
 
 #: libraries/export/csv.php:20 libraries/import/csv.php:26
 #: libraries/import/csv.php:58 libraries/import/ldi.php:39
