--- a/po/ug.po
+++ b/po/ug.po
@@ -2660,7 +2660,7 @@ msgstr ""
 #: libraries/export/csv.php:21 libraries/import/csv.php:27
 #: libraries/import/csv.php:70 libraries/import/ldi.php:40
 msgid "Columns enclosed by"
-msgstr ""
+msgstr "مەزمۇن ئايرىش بەلگۈسى"
 
 #: libraries/export/csv.php:22 libraries/import/csv.php:28
 #: libraries/import/csv.php:74 libraries/import/ldi.php:41
