--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-30 06:51+0200\n"
+"PO-Revision-Date: 2010-07-30 06:52+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -2694,7 +2694,7 @@ msgstr ""
 
 #: libraries/export/excel.php:17
 msgid "CSV for MS Excel"
-msgstr ""
+msgstr "MS Excel دىكى CSVشەكلى"
 
 #: libraries/export/excel.php:31
 msgid "Excel edition"
