Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-30 06:54+0200\n"
+"PO-Revision-Date: 2010-07-30 06:55+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -2729,7 +2729,7 @@ msgstr ""
 
 #: libraries/export/latex.php:14
 msgid "(continued)"
-msgstr ""
+msgstr "داۋاملاشتۇرلىدىغان"
 
 #: libraries/export/latex.php:15
 #, fuzzy
