--- a/po/ug.po
+++ b/po/ug.po
@@ -2796,7 +2796,7 @@ msgstr "PHPنۇسخىسى"
 
 #: libraries/export/mediawiki.php:15
 msgid "MediaWiki Table"
-msgstr ""
+msgstr "MediaWikiجەدىۋېلى"
 
 #: libraries/export/ods.php:17 libraries/import/ods.php:22
 msgid "Open Document Spreadsheet"
