Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-30 07:00+0200\n"
+"PO-Revision-Date: 2010-07-30 07:02+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -2796,7 +2796,7 @@ msgstr "PHPنۇسخىسى"
 
 #: libraries/export/mediawiki.php:15
 msgid "MediaWiki Table"
-msgstr "MediaWikiجەدىۋېلى"
+msgstr "MediaWikiكۈرۈنىشى"
 
 #: libraries/export/ods.php:17 libraries/import/ods.php:22
 msgid "Open Document Spreadsheet"
