Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-30 11:18+0200\n"
+"PO-Revision-Date: 2010-07-30 11:27+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -2079,6 +2079,8 @@ msgstr "بۆلۈپ كىرگۈزىش"
 msgid ""
 "Previous import timed out, after resubmitting will continue from position %d."
 msgstr ""
+"ئالدىنقى قېتىملىق مەشغۇلاتنىڭ ۋاقتى ئېشىپ كەتتى، %d دىن باشلاپ قايتىدىن "
+"تاپشۇرۇڭ."
 
 #: libraries/display_import.lib.php:231
 msgid ""
