Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -258,10 +258,9 @@ msgid "Database %s has been dropped."
 msgstr "Database %s has been dropped."
 
 #: db_operations.php:396
-#, fuzzy
 #| msgid "Go to database"
 msgid "Drop the database (DROP)"
-msgstr "Go to database"
+msgstr "Drop the database (DROP)"
 
 #: db_operations.php:424
 msgid "Copy database to"
